--- a/Cribs/viz_crib.ipynb
+++ b/Cribs/viz_crib.ipynb
@@ -9,7 +9,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import seaborn as sb"
+    "import seaborn as sb\n",
+    "\n",
+    "# sns.set(rc={'figure.figsize': (9, 6)}) # меняем размер графика по умолчанию"
    ]
   },
   {
