Added new features

--- a/Cribs/ml_crib.ipynb
+++ b/Cribs/ml_crib.ipynb
@@ -281,7 +281,7 @@
    "execution_count": 4,
    "outputs": [],
    "source": [
-    "# Random Forest\n",
+    "# Random Forest ( ~GridSearchCV, быстрее, но менее точный)\n",
     "rf = RandomForestClassifier()\n",
     "\n",
     "params = {'n_estimators': range(1, 11),\n",
@@ -393,7 +393,9 @@
    "cell_type": "code",
    "execution_count": null,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#KNeighborsClassifier"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
