--- a/Pets/future_sales/preparation.ipynb
+++ b/Pets/future_sales/preparation.ipynb
@@ -1076,7 +1076,7 @@
    "execution_count": 35,
    "outputs": [],
    "source": [
-    "test.to_feather('C:/Users/nowic/Desktop/Home tasks/Pets/Future Sales/EDA & feather data/test.feather')"
+    "test.to_feather('C:/Users/nowic/Desktop/home_tasks/pets/future_sales/feather_data/test.feather')"
    ],
    "metadata": {
     "collapsed": false,
