--- a/Pets/future_sales/EDA.ipynb
+++ b/Pets/future_sales/EDA.ipynb
@@ -1044,14 +1044,14 @@
     "    if '-' in item:\n",
     "        category_class = item[:item.index('-')]\n",
     "        item_categories_added.at[\n",
-    "            item_categories_added.index[item_categories_added['item_category_name'] == item][0],\n",
-    "            'item_category_class'\n",
-    "        ] = category_class\n",
+    "            item_categories_added.index[\n",
+    "                item_categories_added['item_category_name'] == item][0],\n",
+    "                'item_category_class'] = category_class\n",
     "    else:\n",
     "        item_categories_added.at[\n",
-    "            item_categories_added.index[item_categories_added['item_category_name'] == item][0],\n",
-    "            'item_category_class'\n",
-    "        ] = 'Другое'\n",
+    "            item_categories_added.index[\n",
+    "                item_categories_added['item_category_name'] == item][0],\n",
+    "                'item_category_class'] = 'Другое'\n",
     "item_categories_added"
    ],
    "metadata": {
